# _FamigoAI

./: .gitignore  LICENSE  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
db/: _reset_db.py  models.py  repositories.py  seeds.py  session.py
migrations/: env.py
migrations/versions/: 74ecdaf28434_.py
services/embeddings/: generator.py
services/groups/: membership.py
services/rag/: conversation_summarizer.py  llm_client.py  pgvector_adapter.py  prompt_builder.py  rag_connecter.py  recent_previewer.py  retriever.py
